# doe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: KNOWN_ISSUES.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PLAN.md  SERIALIZATION.md  UX.md  VIGNETTES.md  WEBSERVICE.md  WEBSERVICE_API.md  WEBSERVICE_BUILD.md  WEBSERVICE_EXAMPLES.md  WEBSERVICE_WORKFLOW.md  WORKFLOW.md  WORKFLOW2.md  WORKFLOW3.md  WORKFLOW4.md  WORKFLOW5.md  WORKFLOW6.md  conf.py  example_design.html  index.md
docs/api/: analysis.anova.rst  analysis.diagnostics.rst  analysis.fit.rst  analysis.model.rst  analysis.optimize.rst  analysis.variance.rst  design.rst  factors.rst  generators.blocking.rst  generators.factorial.rst  generators.mixture.rst  generators.optimal.rst  generators.rsm.rst  generators.screening.rst  generators.spacefilling.rst  generators.splitplot.rst  index.rst  interactive.rst  plotting.rst  serialization.rst
doe-service/: README.md  pyproject.toml
doe-service/scripts/: build_api_examples.py  build_webservice_workflow.py
doe-service/src/doe_service/: __init__.py  convert.py  deps.py  errors.py  limits.py  main.py
doe-service/src/doe_service/routers/: __init__.py  analysis.py  designs.py  optimize.py  plot_data.py
doe-service/src/doe_service/schemas/: __init__.py  analysis.py  common.py  design.py  factors.py  generation.py  operations.py  optimization.py  plotting.py  results.py
doe-service/tests/: test_analysis.py  test_convert.py  test_designs.py  test_errors.py  test_factorset_validation.py  test_health.py  test_limits.py  test_openapi.py  test_optimize.py  test_phase5.py  test_plot_data.py  test_routes.py
doe-service/tests/contract/: __init__.py  support.py  test_contract.py  test_tolerance.py
doe-service/tests/contract/pairs/: anova.json  augment.json  candidates.json  central_composite.json  coverage.json  desirability.json  diagnostics.json  fit.json  fit_gls.json  optimal.json  optimum.json  predict.json  split_plot.json  stationary_point.json  validation_error.json
doe-web/: README.md  pyproject.toml
doe-web/src/doe_web/: __init__.py  main.py
doe-web/src/doe_web/static/: app.js  index.html  style.css
doe-web/tests/: test_app.py
scripts/: build_vignette_assets.py  build_workflow2_assets.py  build_workflow3_assets.py  build_workflow4_assets.py  build_workflow5_assets.py  build_workflow6_assets.py  build_workflow_assets.py
src/doe/: __init__.py  _json.py  design.py  factors.py  interactive.py  plotting.py  serialization.py
src/doe/analysis/: __init__.py  anova.py  diagnostics.py  fit.py  model.py  optimize.py  variance.py
src/doe/generators/: __init__.py  blocking.py  factorial.py  mixture.py  optimal.py  rsm.py  screening.py  spacefilling.py  splitplot.py
tests/: conftest.py  test_anova.py  test_blocking.py  test_design.py  test_diagnostics.py  test_factorial.py  test_factors.py  test_fit.py  test_interactive.py  test_mixture.py  test_model.py  test_optimal.py  test_optimal_benchmark.py  test_optimize.py  test_plotting.py  test_public_api.py  test_rsm.py  test_screening.py  test_serialization.py  test_spacefilling.py  test_splitplot.py  test_to_dict.py
