[project]
name = "doe"
version = "0.1.0"
description = "A Python library for design-of-experiment analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scott Warchal", email = "scott.warchal@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
stats = ["statsmodels>=0.14"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# No explicit python_version: mypy targets the interpreter it runs under, so its stub
# parsing matches the installed numpy/pandas (newer numpy stubs use 3.12+ `type` syntax).
[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*"]
ignore_missing_imports = true
